--- a/shippable.yml
+++ b/shippable.yml
@@ -2,10 +2,5 @@ language: java
 build_environment : Ubuntu 12.04LTE
 jdk:
   - oraclejdk7
-  - openjdk7
-notifications:
-  email:
-    recipients:
-      - vidya@shippable.com
-    on_success:  change
-    on_failure:  change 
+script: 
+   - ant coverage
